# query-generation-agent

./: .cursorignore  .dockerignore  .env.example  .gitignore  .sqlfluff  CHANGE_SUMMARY_SOURCE_TABLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: query-generation-mcp-service-6f5acd58.plan.md
.cursor/rules/: bigquery-documentation.mdc  bigquery-lineage-tracking.mdc  config-management.mdc  mcp-server-standards.mdc  no-auto-markdown.mdc  no-credential-leaks.mdc  poetry-dependency-management.mdc  python-general-rules.mdc
examples/: README.md  http_client_example.py  integrated_workflow_example.py  quick_test.py  stdio_client_example.py  test_source_tables.py
src/query_generation_agent/: __init__.py
src/query_generation_agent/clients/: __init__.py  bigquery_client.py  discovery_client.py  gemini_client.py
src/query_generation_agent/generation/: insight_parser.py  prompt_templates.py  query_ideator.py  query_planner.py  query_refiner.py  view_generator.py
src/query_generation_agent/mcp/: __main__.py  auth.py  config.py  handlers.py  http_server.py  jsonrpc.py  server.py  task_manager.py  tools.py
src/query_generation_agent/models/: query_plan.py  request_models.py  response_models.py  (+1 more)
tests/: test_prp_parser.py
tests/integration/: test_handler_dataset_ids.py  test_http_server_auth.py
tests/unit/: test_auth.py  test_config.py  test_discovery_client.py  test_insight_parser.py  test_models.py  test_query_naming.py
tests/validation/: __init__.py  test_sqlfluff_validator.py
(+7 files in other folders)
